[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/PlantLeafy.gd" type="Script" id=1]
[ext_resource path="res://scripts/_InteractionArea_Active.gd" type="Script" id=2]
[ext_resource path="res://sceneObjects/TextBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/leaves.png" type="Texture" id=4]
[ext_resource path="res://shaders/PlantLeafy.tres" type="Material" id=5]

[sub_resource type="SphereShape" id=10]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.270833, 1 )
colors = PoolColorArray( 0.225189, 0.367188, 0.264017, 1, 0.0144196, 0.738281, 0.432902, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 500

[sub_resource type="CylinderMesh" id=16]
material = ExtResource( 5 )
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="PrismMesh" id=15]
material = ExtResource( 5 )
size = Vector3( 2.5, 2, 0.1 )

[sub_resource type="CylinderMesh" id=17]
material = ExtResource( 5 )
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="CylinderMesh" id=18]
material = ExtResource( 5 )
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="CylinderMesh" id=14]
material = ExtResource( 5 )
top_radius = 0.1
bottom_radius = 0.1

[node name="Plant" type="Spatial"]
script = ExtResource( 1 )

[node name="InteractionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
shape = SubResource( 10 )

[node name="Plant TextBox" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="TextBox" parent="Plant TextBox" index="0"]
texture = SubResource( 12 )

[node name="Portrait" parent="Plant TextBox/TextBox" index="0"]
texture = ExtResource( 4 )

[node name="Text" parent="Plant TextBox/TextBox" index="1"]
bbcode_text = "...
...
......
"
text = "...
...
......
"

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )

[node name="plantTop" type="Spatial" parent="Mesh"]

[node name="plant" type="Spatial" parent="Mesh/plantTop"]
editor/display_folded = true
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0, 0, 0 )

[node name="Stem" type="MeshInstance" parent="Mesh/plantTop/plant"]
transform = Transform( 1, 0, 0, 0, 0.949769, 0.312953, 0, -0.312953, 0.949769, 0, 1.72271, -0.46507 )
mesh = SubResource( 16 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantTop/plant"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 2.89896, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[node name="plant2" type="Spatial" parent="Mesh/plantTop"]
transform = Transform( -1, 0, 5.96046e-008, 0, 1, 0, -5.96046e-008, 0, -1, 0, 0, 0 )

[node name="Stem" type="MeshInstance" parent="Mesh/plantTop/plant2"]
transform = Transform( 1, 0, 0, 0, 0.949769, 0.312953, 0, -0.312953, 0.949769, 0, 1.72271, -0.46507 )
mesh = SubResource( 17 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantTop/plant2"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 2.89896, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[node name="plant3" type="Spatial" parent="Mesh/plantTop"]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0 )

[node name="Stem" type="MeshInstance" parent="Mesh/plantTop/plant3"]
transform = Transform( 1, 0, 0, 0, 0.949769, 0.312953, 0, -0.312953, 0.949769, 0, 1.72271, -0.46507 )
mesh = SubResource( 18 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantTop/plant3"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 2.89896, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[node name="plantBase" type="Spatial" parent="Mesh"]

[node name="plant" type="Spatial" parent="Mesh/plantBase"]

[node name="Stem" type="MeshInstance" parent="Mesh/plantBase/plant"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1, -0.492248 )
mesh = SubResource( 14 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantBase/plant"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 1.43836, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[node name="plant2" type="Spatial" parent="Mesh/plantBase"]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 0, 0, 0 )

[node name="Stem" type="MeshInstance" parent="Mesh/plantBase/plant2"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1, -0.492248 )
mesh = SubResource( 14 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantBase/plant2"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 1.43836, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[node name="plant3" type="Spatial" parent="Mesh/plantBase"]
editor/display_folded = true
transform = Transform( -0.5, 0, 0.866026, 0, 1, 0, -0.866026, 0, -0.5, 0, 0, 0 )

[node name="Stem" type="MeshInstance" parent="Mesh/plantBase/plant3"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1, -0.492248 )
mesh = SubResource( 14 )
material/0 = null

[node name="Leaf" type="MeshInstance" parent="Mesh/plantBase/plant3"]
transform = Transform( 1, 0, 0, 0, -0.357112, 0.934062, 0, -0.934062, -0.357112, 0, 1.43836, -1.83374 )
mesh = SubResource( 15 )
material/0 = null

[editable path="Plant TextBox"]
